--- a/angularapp/src/app/component/user/dashboard/dashboard.component.html
+++ b/angularapp/src/app/component/user/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     <div class="container col">
       <div class="card-container">
         <div class="card" id="{{grid}}">
-          <img src={{serviceimage}} alt="Image" class="img" id="productImage">
+          <img src={{serviceimage}} alt="Image" width="450" height="250" class="img" id="productImage">
 
           <div class="card-details">
             <h3>{{serviceName}}</h3>
