--- a/angularapp/src/app/component/user/appointment/appointment.component.html
+++ b/angularapp/src/app/component/user/appointment/appointment.component.html
@@ -1,119 +1,212 @@
 <app-user></app-user>
 
-  <body>
+<body>
 
-  
+
   <div class="bgcolor" id="myBookingBody">
-      <div class="container">
+    <div class="container">
       <br>
       <div class="alert" *ngIf="AppointmentArr.length===0">
         <h1>NO BOOKING</h1>
       </div>
       <table class="table table-striped" *ngIf="AppointmentArr.length>0">
-          <thead>
-              <tr>
-              <th>#</th>
-              <th>NAME</th>
-              <th>DATE</th>
-              <th>TIMING</th>
-              <th>ACTION</th>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>NAME</th>
+            <th>DATE</th>
+            <th>TIMING</th>
+            <th>ACTION</th>
           </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let app of AppointmentArr ;let i=index">
-              <td>{{ i + 1 }}</td>
-              <td id="centerName{{i+1}}">{{app.servicecenter}}</td>
-              <td>{{app.date}}</td>
-              <td>{{app.time}}</td>
-              <td >
-                <button class="btn-link"(click)="fillappointment(app)"  id="editBooking">Edit</button>
-               
-                <button class="btn-link"(click)="deleteappointment(app.id)"  id="deleteBooking">Delete</button>
-              </td>
+        </thead>
+        <tbody>
+          <tr *ngFor="let app of AppointmentArr ;let i=index">
+            <td>{{ i + 1 }}</td>
+            <td id="centerName{{i+1}}">{{app.servicecenter}}</td>
+            <td>{{app.date}}</td>
+            <td>{{app.time}}</td>
+            <td>
+              <!-- <button class="btn-link" (click)="fillappointment(app)" id="editBooking">Edit</button> -->
+              <button type="button" class="btn btn-primary" (click)="fillappointment(app)" data-toggle="modal"
+                data-target="#exampleModal">
+                EDIT
+              </button>
+              <button type="button" class="btn btn-primary" (click)="deleteappointment(app.id)" id="deleteBooking">
+                DELETE
+              </button>
+
+
+              <!-- <button class="btn-link" (click)="deleteappointment(app.id)" id="deleteBooking">Delete</button> -->
+            </td>
           </tr>
-          </tbody>
-          
+        </tbody>
+
       </table>
     </div>
-      <div class="right-half-container">
-        <div class="box-form">
-          <div class="right">
-            <div class="inputs">
-              <h1>Enter the details</h1>
-              <form [formGroup]="EditAppointment">
-                <input type="text" placeholder="Enter the name of the product" id="editProductName"
-                  formControlName="productName">
-                <small
-                  *ngIf="EditAppointment.controls['productName'].dirty && EditAppointment.hasError('required','productName')">Product
-                  name is required</small>
+    <div class="right-half-container">
+      <div class="box-form">
+        <div class="right">
+          <div class="inputs">
+            <h1>Enter the details</h1>
+            <form [formGroup]="EditAppointment">
+              <input type="text" placeholder="Enter the name of the product" id="editProductName"
+                formControlName="productName">
+              <small
+                *ngIf="EditAppointment.controls['productName'].dirty && EditAppointment.hasError('required','productName')">Product
+                name is required</small>
+
+              <input type="text" placeholder="Enter the model no of the product" id="editModelNo"
+                formControlName="productModelNo">
+              <small
+                *ngIf="EditAppointment.controls['productModelNo'].dirty && EditAppointment.hasError('required','productModelNo')">productModelNo
+                is required</small>
+
+              <input type="date" placeholder="Enter the date of purchase" id="editDateOfPurchase"
+                formControlName="dateOfPurchase">
+              <small
+                *ngIf="EditAppointment.controls['dateOfPurchase'].dirty && EditAppointment.hasError('required','dateOfPurchase')">ProductDateOfPurchase
+                is required</small>
+
+              <input type="tel" placeholder="Enter the contact number" id="editContactNumber"
+                formControlName="contactNumber">
+              <small
+                *ngIf="EditAppointment.controls['contactNumber'].dirty && EditAppointment.hasError('required','contactNumber')">contactNumber
+                is required</small>
+
+              <textarea placeholder="Enter problem of the product" id="enterProblem"
+                formControlName="problemDescription"></textarea>
+              <small
+                *ngIf="EditAppointment.controls['problemDescription'].dirty && EditAppointment.hasError('required','problemDescription')">problemDescription
+                is required</small>
+                <br>
+                <h3>Book the Slots</h3>
+
+              <div class="slots">
+
+              <select id="selectDate" formControlName="date"placeholder="Choose the DATE">
+                <option value="" disabled selected>Select a date</option>
+                <ng-container *ngFor="let slot of availableSlots">
+                  <option [value]="slot.date">{{ slot.date }}</option>
+                </ng-container>
+              </select>
+              <small
+                *ngIf="EditAppointment.controls['date'].dirty && EditAppointment.hasError('required', 'date')">
+                Date is required
+              </small>
+
+
+              <select id="selectTime" formControlName="time" placeholder="Choose the time slot">
+                <option value="" disabled selected>Select a time</option>
+                <ng-container *ngFor="let slot of availableSlots" >
+                  <ng-container *ngIf="slot.date === EditAppointment.value.date">
+                    <option *ngFor="let timeSlot of slot.times" [value]="timeSlot.time" [disabled]="timeSlot.isBooked">
+                      {{ timeSlot.time }}
+                    </option>
+                  </ng-container>
+                </ng-container>
+              </select>
+              <small *ngIf="EditAppointment.controls['time'].dirty && EditAppointment.controls['time'].hasError('required')">
+                Time is required
+              </small>
+
+            </div>
+
+              <button class="btn-link"(click)="Update()" type="submit" id="updateBooking">Update</button>
+            </form>
+          </div>
+        </div>
+      </div>
   
-                <input type="text" placeholder="Enter the model no of the product" id="editModelNo"
-                  formControlName="productModelNo">
-                <small
-                  *ngIf="EditAppointment.controls['productModelNo'].dirty && EditAppointment.hasError('required','productModelNo')">productModelNo
-                  is required</small>
-  
-                <input type="date" placeholder="Enter the date of purchase" id="editDateOfPurchase"
-                  formControlName="dateOfPurchase">
-                <small
-                  *ngIf="EditAppointment.controls['dateOfPurchase'].dirty && EditAppointment.hasError('required','dateOfPurchase')">ProductDateOfPurchase
-                  is required</small>
-  
-                <input type="tel" placeholder="Enter the contact number" id="editContactNumber"
-                  formControlName="contactNumber">
-                <small
-                  *ngIf="EditAppointment.controls['contactNumber'].dirty && EditAppointment.hasError('required','contactNumber')">contactNumber
-                  is required</small>
-  
-                <textarea placeholder="Enter problem of the product" id="enterProblem"
-                  formControlName="problemDescription"></textarea>
-                <small
-                  *ngIf="EditAppointment.controls['problemDescription'].dirty && EditAppointment.hasError('required','problemDescription')">problemDescription
-                  is required</small>
-                  <br>
-                  <h3>Book the Slots</h3>
-  
-                <div class="slots">
-  
-                <select id="selectDate" formControlName="date"placeholder="Choose the DATE">
+    <br>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">EDIT APPOINTMENT</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="EditAppointment">
+              <input type="text" placeholder="Enter the name of the product" id="editProductName"
+                formControlName="productName">
+              <small
+                *ngIf="EditAppointment.controls['productName'].dirty && EditAppointment.hasError('required','productName')">Product
+                name is required</small>
+
+              <input type="text" placeholder="Enter the model no of the product" id="editModelNo"
+                formControlName="productModelNo">
+              <small
+                *ngIf="EditAppointment.controls['productModelNo'].dirty && EditAppointment.hasError('required','productModelNo')">productModelNo
+                is required</small>
+
+              <input type="date" placeholder="Enter the date of purchase" id="editDateOfPurchase"
+                formControlName="dateOfPurchase">
+              <small
+                *ngIf="EditAppointment.controls['dateOfPurchase'].dirty && EditAppointment.hasError('required','dateOfPurchase')">ProductDateOfPurchase
+                is required</small>
+
+              <input type="tel" placeholder="Enter the contact number" id="editContactNumber"
+                formControlName="contactNumber">
+              <small
+                *ngIf="EditAppointment.controls['contactNumber'].dirty && EditAppointment.hasError('required','contactNumber')">contactNumber
+                is required</small>
+
+              <textarea placeholder="Enter problem of the product" id="enterProblem"
+                formControlName="problemDescription"></textarea>
+              <small
+                *ngIf="EditAppointment.controls['problemDescription'].dirty && EditAppointment.hasError('required','problemDescription')">problemDescription
+                is required</small>
+              <br>
+              <h3>Book the Slots</h3>
+
+              <div class="slots">
+
+                <select id="selectDate" formControlName="date" placeholder="Choose the DATE">
                   <option value="" disabled selected>Select a date</option>
                   <ng-container *ngFor="let slot of availableSlots">
                     <option [value]="slot.date">{{ slot.date }}</option>
                   </ng-container>
                 </select>
-                <small
-                  *ngIf="EditAppointment.controls['date'].dirty && EditAppointment.hasError('required', 'date')">
+                <small *ngIf="EditAppointment.controls['date'].dirty && EditAppointment.hasError('required', 'date')">
                   Date is required
                 </small>
-  
-  
+
+
                 <select id="selectTime" formControlName="time" placeholder="Choose the time slot">
                   <option value="" disabled selected>Select a time</option>
-                  <ng-container *ngFor="let slot of availableSlots" >
+                  <ng-container *ngFor="let slot of availableSlots">
                     <ng-container *ngIf="slot.date === EditAppointment.value.date">
-                      <option *ngFor="let timeSlot of slot.times" [value]="timeSlot.time" [disabled]="timeSlot.isBooked">
+                      <option *ngFor="let timeSlot of slot.times" [value]="timeSlot.time"
+                        [disabled]="timeSlot.isBooked">
                         {{ timeSlot.time }}
                       </option>
                     </ng-container>
                   </ng-container>
                 </select>
-                <small *ngIf="EditAppointment.controls['time'].dirty && EditAppointment.controls['time'].hasError('required')">
+                <small
+                  *ngIf="EditAppointment.controls['time'].dirty && EditAppointment.controls['time'].hasError('required')">
                   Time is required
                 </small>
-  
+
               </div>
-  
-                <button class="btn-link"(click)="Update()" type="submit" id="updateBooking">Update</button>
-              </form>
-            </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" (click)="Update()" id="updateBooking"
+              data-dismiss="modal">Save changes</button>
           </div>
         </div>
-    
-      <br>
       </div>
+    </div>
   </div>
+  
 
-  
-  </body>
-  
-    
+
+</body>
