--- a/angularapp/src/app/component/user/dashboard/dashboard.component.css
+++ b/angularapp/src/app/component/user/dashboard/dashboard.component.css
@@ -6,8 +6,8 @@
 .card-container {
   flex: 1;
   display: flex;
-  /* margin-left: 0px; */
-  width: 350%;
+  margin-left: 150px;
+  width: 225%;
   height: 100%;
 }
 
@@ -101,5 +101,12 @@ body{
   justify-content: center;
   align-items: center;
   padding-bottom: 355px;
+}
+img{
+
+    width: 40px;
+    height: 50px;
+    margin-bottom: 10px;
+
 }
 
