--- a/angularapp/src/app/component/admin/edit-service-center/edit-service-center.component.css
+++ b/angularapp/src/app/component/admin/edit-service-center/edit-service-center.component.css
@@ -1,23 +1,10 @@
 body{
-  background-color: rgb(0, 191, 255);
+  background-color: lightblue;
 }
 
-/* Form */
-.form {
-  width: 50%;
-  float: right;
-  margin-top: 40px;
-  /* margin-right: 10px; */
-  /* padding-right: 20px; */
-  box-sizing: border-box;
-  background-color: lavender;
-  padding: 30px;
-}
 
-.form1 {
-  width: 50%;
-  float: left;
-}
+
+
 
 @media (max-width: 768px) {
   .form,
@@ -27,26 +14,9 @@ body{
   }
 }
 
-.form h6 {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
 
-.form input,
-.form textarea {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
 
-.form small {
-  color: red;
-  margin-top: 5px;
-  display: block;
-}
+
 
 .form button {
   padding: 10px 20px;
@@ -85,7 +55,7 @@ body{
   font-size: 18px;
 }
 
-.gray-container button {
+.grid-container button {
   padding: 10px 20px ;
   background-color: palevioletred;
   color: white;
@@ -105,4 +75,118 @@ body {
   padding: 15px;
   background-color:palevioletred;
   color: white;
+}
+.inputs {
+  margin-bottom: 20px;
+}
+
+input[type="text"],
+input[type="date"],
+input[type="tel"],
+input[type='url'],
+input[type='email'],
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button[type="submit"] {
+  padding: 10px 20px;
+  background-color: palevioletred;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+small {
+  color: red;
+}
+.grid-item {
+  border: 1px solid #00ecfd;
+  width: calc(33.33% - 20px);
+  border-radius: 20px;
+  height: 380px;
+  background-color: lavender;
+  cursor: pointer;
+  margin: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  float: left;
+}
+
+/* Clearfix for every third item */
+.grid-item:nth-child(4n+1) {
+  clear: left;
+}
+
+/* Clearfix for the last row if it contains less than three items */
+.grid-container::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.grid-item img {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+}
+
+.grid-item h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.grid-item p {
+  margin-bottom: 10px;
+}
+
+.grid-item button {
+  /* background-color: #090c09; */
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.grid-item button:hover {
+  background-color: #27702a;
+}
+
+p {
+  font-family: italic;
+  color: black;
+  overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  /* Adjust grid item width for smaller screens */
+  .grid-item {
+    width: calc(50% - 20px);
+  }
+}
+
+@media (max-width: 576px) {
+  /* Adjust grid item width for even smaller screens */
+  .grid-item {
+    width: calc(100% - 20px);
+  }
 }
