--- a/angularapp/src/app/component/user/appointment/appointment.component.css
+++ b/angularapp/src/app/component/user/appointment/appointment.component.css
@@ -85,13 +85,14 @@ select {
 }
 
 button[type="submit"] {
-  padding: 10px 20px;
+  padding: 10px 20px ;
   background-color: palevioletred;
   color: white;
   border: none;
   border-radius: 4px;
   font-size: 16px;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 small {
