--- a/angularapp/src/app/component/signup/signup.component.html
+++ b/angularapp/src/app/component/signup/signup.component.html
@@ -10,7 +10,7 @@
         <br>
         <form [formGroup]="SignupForm">
           <select formControlName="userRole" id="admin/user">
-            <option value="">select</option>
+            <option value="">Enter admin/user</option>
             <option  value="user">User</option>
             <option  value="admin">Admin</option>
           </select>
