--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+.backgroundui {
+    font-family: Arial, sans-serif;
+    background-image: url("https://uniquecoolingsolution.com/images/ban1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body{
+  background-color: lightblue;
+  }
+  @import '~bootstrap/dist/css/bootstrap.css';
+  @import "~bootstrap-icons/font/bootstrap-icons.css";
+  
+  
