--- a/angularapp/src/app/login/login.component.html
+++ b/angularapp/src/app/login/login.component.html
@@ -1,34 +1,52 @@
-
-<div class="container-fluid p-0">
-    <div class="row m-0">
-      <div class="col-lg-6 col-md-8 col-sm-10 mx-auto my-5">
-        <div class="card shadow-lg border-0">
-          <div class="card-body p-5">
-            <h1 class="text-center mb-4 display-4">Welcome Back!</h1>
-            <h3 class="text-center mb-4">Login Here</h3>
+<div class="login-page">
+  <div class="blur-background"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 offset-lg-6 col-md-8 offset-md-4">
+        <div class="card login-card bg-blur">
+          <div class="card-header">
+            <h3 class="text-center">Login</h3>
+          </div>
+          <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input formControlName="email" type="email" class="form-control rounded-pill py-2 px-3" placeholder="Enter your email">
-                <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="text-danger small mt-1">
-                  <div *ngIf="loginForm.get('email')">Email is required.</div>
-                  <div *ngIf="loginForm.get('email')">Invalid email address.</div>
+                <label for="email" class="form-label">Email address</label>
+                <div class="input-group">
+                  <span class="input-group-text">
+                    <i class="fas fa-user fa-lg"></i>
+                  </span>
+                  <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter your email">
                 </div>
+                <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="text-danger small mt-1">
+                  <div *ngIf="loginForm.get('email')?.errors?.['required']">Email is required.</div>
+                  <div *ngIf="loginForm.get('email')?.errors?.['email']">Invalid email address.</div>
+                </div>
+
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input formControlName="password" type="password" class="form-control rounded-pill py-2 px-3" placeholder="Enter your password">
-                <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="text-danger small mt-1">
-                  <div *ngIf="loginForm.get('password')">Password is required.</div>
+                <div class="input-group">
+                  <span class="input-group-text">
+                    <i class="fas fa-lock fa-lg"></i>
+                  </span>
+                  <input type="password" class="form-control" id="password" formControlName="password" placeholder="Enter your password">
                 </div>
+                <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="text-danger small mt-1">
+                  <div *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</div>
+                  <div *ngIf="loginForm.get('password')?.errors?.['minlength']">Password should be at least 8 characters long.</div>
+                </div>
+
               </div>
-              <button type="submit" class="btn btn-primary btn-block rounded-pill py-2">Submit</button>
-              <span class="d-block text-center mt-3 small">Don't have an account? <a routerLink="/signup" class="text-primary">Sign up</a></span>
+              <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
             </form>
+          </div>
+          <div class="card-footer">
+            <p class="text-center">Don't have an account?<a routerLink="/signup">Sign up</a></p>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
-  
+</div>
+
