--- a/angularapp/src/app/component/signup/signup.component.css
+++ b/angularapp/src/app/component/signup/signup.component.css
@@ -27,7 +27,13 @@ h6 {
   margin-bottom: 20px;
 }
 
-select,
+select{
+  width: 99%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
 input[type="email"],
 input[type="text"],
 input[type="tel"],
