--- a/angularapp/src/app/component/admin/edit-service-center/edit-service-center.component.html
+++ b/angularapp/src/app/component/admin/edit-service-center/edit-service-center.component.html
@@ -1,37 +1,61 @@
 <app-admin></app-admin>
 <body>
+    <div class="popup-container" *ngIf="successmessage">
+        <span class="alert alert-success" role="alert">
+          <i class="bi bi-check-circle-fill"></i>      {{successmessage}}
+        </span>
+      </div>
+      <div class="popup-container" *ngIf="errormessage">
+        <span class="alert alert-danger" role="alert"  (click)="errpopup()">
+          <i class="bi bi-x-square-fill" ></i>      {{errormessage}}
+        </span>
+      </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Service</h5>
+                    <h5 class="modal-title" id="exampleModalLabel"><b>Edit Service Center Details</b></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form [formGroup]="editCenter">
 
+                        <label><h5><b>Enter Service Center Name : </b></h5></label>
                         <input formControlName="serviceCenterName" type="text" placeholder="Enter the ServiceCenter name" id="editName" />
                         <small *ngIf="editCenter.controls['serviceCenterName'].dirty && editCenter.hasError('required','serviceCenterName')">Center name is required</small>
-
+                        <small *ngIf="editCenter.controls['serviceCenterName'].dirty && editCenter.hasError('pattern','serviceCenterName')">Only Alphabets Allowed </small>
+                        <br>
+                        <label><h5><b>Enter Service Center Phone Number : </b> </h5></label>
                         <input formControlName="serviceCenterPhone" type="tel" placeholder="Center Number" id="editNumber" />
-                        <small *ngIf="editCenter.controls['serviceCenterPhone'].dirty && editCenter.hasError('required','serviceCenterPhone')">Center Number is required</small>
+                        <small *ngIf="editCenter.controls['serviceCenterPhone'].dirty && editCenter.hasError('required','serviceCenterPhone')">Phone Number is required</small>
+                        <small *ngIf="editCenter.controls['serviceCenterPhone'].dirty && editCenter.hasError('pattern','serviceCenterPhone')">Invalid Phone Number (10 digits Only) </small>
+                        <br>
 
+                        <label><h5><b>Enter Service Center Address : </b></h5></label>
                         <textarea formControlName="serviceCenterAddress" placeholder="Center Address" id="editAddress"></textarea>
                         <small *ngIf="editCenter.controls['serviceCenterAddress'].dirty && editCenter.hasError('required','serviceCenterAddress')">Center address is required</small>
-
+                        <small *ngIf="editCenter.controls['serviceCenterAddress'].dirty && editCenter.hasError('pattern','serviceCenterAddress')">Invalid Address</small>
+                        <br>
+                        <label><h5><b>Enter Service Center Image URL :</b> </h5></label>
                         <input formControlName="serviceCenterImageUrl" type="url" placeholder="Center image" id="editImageUrl" />
-                        <small *ngIf="editCenter.controls['serviceCenterImageUrl'].dirty && editCenter.hasError('required','serviceCenterImageUrl')">imageURL is required</small>
-
+                        <small *ngIf="editCenter.controls['serviceCenterImageUrl'].dirty && editCenter.hasError('required','serviceCenterImageUrl')">Image URL is required</small>
+                        <small *ngIf="editCenter.controls['serviceCenterImageUrl'].dirty && editCenter.hasError('pattern','serviceCenterImageUrl')">Invalid image URL</small>
+                        <br>
+                        <label><h5><b>Enter Service Center Mail Id : </b></h5></label>
                         <input formControlName="serviceCenteramailId" type="email" placeholder="Center Mail ID" id="editEmail" />
                         <small *ngIf="editCenter.controls['serviceCenteramailId'].dirty && editCenter.hasError('required','serviceCenteramailId')">Email is required</small>
-
+                        <small *ngIf="editCenter.controls['serviceCenteramailId'].dirty && editCenter.hasError('pattern','serviceCenteramailId')">Invalid Email</small>
+                        <br>
+                        <label><h5><b>Enter Service Center Description :</b> </h5></label>
                         <textarea formControlName="serviceCenterDescription" placeholder="About Center" id="editCenterDescripition"></textarea>
+                        <small *ngIf="editCenter.controls['serviceCenterDescription'].dirty && editCenter.hasError('pattern','serviceCenterDescription')">No Special Characters Allowed</small>
+                        <br>
                         <small *ngIf="editCenter.controls['serviceCenterDescription'].dirty && editCenter.hasError('required','serviceCenterDescription')">Center Description is required</small>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="onedit()" id="updateButton">Save changes</button>
+                    <button type="button" class="btn btn-primary"  data-bs-dismiss="modal"(click)="onedit()" id="updateButton">Save changes</button>
                 </div>
             </div>
         </div>
@@ -46,7 +70,7 @@
                     <div class="item">
                         <img src="{{ser.serviceCenterImageUrl}}" alt="Grid Image" class="grid-image">
                         <div>
-                            <h3>Center Name: {{ser.serviceCenterName}}</h3>
+                            <h3 style="text-transform: capitalize;">Center Name: {{ser.serviceCenterName}}</h3>
                             <h3>Contact Number: {{ser.serviceCenterPhone}}</h3>
                             <h3>Contact MailID: {{ser.serviceCenteramailId}}</h3>
                             <button type="button" class="btn btn-primary" (click)="updateform(ser)" id="editCenter" data-bs-toggle="modal" data-bs-target="#exampleModal">EDIT</button>
