--- a/angularapp/src/app/component/user/appointment/appointment.component.css
+++ b/angularapp/src/app/component/user/appointment/appointment.component.css
@@ -16,14 +16,14 @@ body{
   margin: 0 auto;
 }
 
-.alert {
+/* .alert {
   background-color: #f8d7da;
   color: #721c24;
   padding: 20px;
   margin-bottom: 20px;
   border: 1px solid #f5c6cb;
   border-radius: 4px;
-}
+} */
 
 table {
   width: 100%;
@@ -128,6 +128,15 @@ form {
   text-align: center;
   background-color: azure;
   border-radius: 20px;
+}
+.popup-container {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
 }
 
 
