--- a/angularapp/src/app/component/user/dashboard/dashboard.component.css
+++ b/angularapp/src/app/component/user/dashboard/dashboard.component.css
@@ -26,7 +26,7 @@
 .card img {
   flex: 1;
   width: 100%;
-  height: 100%;
+  height: 50%;
   object-fit: cover;
   border-radius: 20px 20px 0 0;
 }
@@ -49,12 +49,15 @@
   padding: 30px;
   background-color:lavender;
   margin-right: 40px;
-  margin-left:100px ;
-  width: 720px;
+  margin-left:40px ;
+  width: 700px;
+  height: auto;
 }
 
 h1 {
   margin-top: 0;
+  color: darkblue;
+  text-align: center;
 }
 
 form {
@@ -91,9 +94,13 @@ button[type="submit"] {
   font-size: 16px;
   cursor: pointer;
 }
+label h5{
+  color: darkblue;
+}
 
 small {
-  color: red;
+  color:red;
+  font-size: 18px;
 }
 body{
   background-color: lightblue;
@@ -110,3 +117,16 @@ img{
 
 }
 
+p{
+  font-size: 20px;
+  font-style: bold;
+}
+.popup-container {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
