final code for review

--- a/angularapp/src/app/component/admin/add-service-center/add-service-center.component.html
+++ b/angularapp/src/app/component/admin/add-service-center/add-service-center.component.html
@@ -10,12 +10,11 @@
   </span>
 </div>
 <body>
- 
-  
   <div class="cards" style="margin-top: 5%;">
     <div class="card">
         <h2 style="text-align: center;color: darkblue; margin-top: 10px;">ADD SERVICE CENTER</h2><br>
         <div class="line" style="margin-bottom: 15px;"></div>
+<!-- ADD SERVICE CENTER FORM -->
         <form [formGroup]="addCenter">
 
           <label>Enter Service Center Name </label>
