--- a/angularapp/src/app/component/carousel/carousel.component.html
+++ b/angularapp/src/app/component/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-
+<!-- To Show the Review -->
 <div class="carousel">
     <div class="carouse1"*ngIf="carouselItems.length==0">
       NO REVIEW AVAILABLE
