--- a/angularapp/src/app/component/user/homepage/homepage.component.html
+++ b/angularapp/src/app/component/user/homepage/homepage.component.html
@@ -2,6 +2,7 @@
 <body>
   
   <div class="viewport">
+    <!-- SHOW AVAILABLE SERVICE CENTER -->
     <div class="title">
       <h1> Welcome to Cooling King AC Service Management System</h1>
     </div>
