--- a/angularapp/src/app/component/user/dashboard/dashboard.component.html
+++ b/angularapp/src/app/component/user/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <app-user style="position: sticky; top: 0; z-index: 100;"></app-user>
+<!-- POPUP MESSAGES -->
 <div class="popup-container" *ngIf="successmessage">
   <span class="alert alert-success" role="alert">
     <i class="bi bi-check-circle-fill"></i> {{successmessage}}
@@ -16,6 +17,7 @@
   <br>
     <div>
       <div>
+        <!-- TO SHOW SELECTED SERVICE CENTER -->
         <div class="cards">
           <div class="card">
             <img class="card_img" [src]="serviceimage" alt="Grid Image">
@@ -33,7 +35,7 @@
             <p><b>Reviews</b></p>
             <p><app-carousel></app-carousel></p> 
           </div>
-    
+    <!-- FORM TO BOOK THE APPOINTMENT -->
           <div class="card">
             <h3 style="text-align: center;"> Enter Ac Details</h3>
             <div class="line"></div>
