--- a/angularapp/src/app/component/user/appointment/appointment.component.html
+++ b/angularapp/src/app/component/user/appointment/appointment.component.html
@@ -77,7 +77,7 @@
     </div>
 <!-- ALERT MESSAGES -->
     <div class="alert">
-      You canwhnot edit or cancel the appointment on the day of service.<br>
+      You cannot edit or cancel the appointment on the day of service.<br>
       The bill is available only on the day after the service is completed.
     </div>
 
@@ -192,7 +192,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" id="closemodal"data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" id="closemodal1"data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary"  (click)="reviews()" id="submitreview">submit</button>
           </div>
         </div>
